--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       DB_HOST: db
       DB_PORT: 3306
       DB_NAME: signup_login
-      DB_USER: mayur
-      DB_PASSWORD: mayur        
+      DB_USER: srini
+      DB_PASSWORD: srini        
 
   db:
     container_name: db
@@ -25,8 +25,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: signup_login
-      MYSQL_USER: mayur
-      MYSQL_PASSWORD: mayur
+      MYSQL_USER: srini
+      MYSQL_PASSWORD: srini
     ports:
       - 3306:3306
     volumes:
